--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = jsonpatch
 url = http://pypi.debian.net/jsonpatch/jsonpatch-1.23.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/stefankoegl/python-json-patch.git
 
 [autospec]
 # build 32 bit libraries
